Add ajax table functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">            
             <ul class="nav navbar-nav navbar-right">
                 <li><a href=" {{ url_for('basic_table') }} ">Basic table</a></li>
+                <li><a href=" {{ url_for('ajax_table') }} ">Ajax table</a></li>
+                <li><a href=" {{ url_for('server_side_table') }} ">Server-side table</a></li>
             </ul>                       
         </div>
     </div>
