Add an editable table

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,7 @@
                 <li><a href=" {{ url_for('basic_table') }} ">Basic table</a></li>
                 <li><a href=" {{ url_for('ajax_table') }} ">Ajax table</a></li>
                 <li><a href=" {{ url_for('server_side_table') }} ">Server-side table</a></li>
+                <li><a href=" {{ url_for('editable_table') }} ">Editable table (Server-side)</a></li>
             </ul>                       
         </div>
     </div>
