--- a/app/templates/basic_table.html
+++ b/app/templates/basic_table.html
@@ -3,7 +3,7 @@
 {% block app_context %}
 <div class="row">
     <div class="col-md-12">
-        <h1>Basic Table</h1>
+      <h1>{{ title }}</h1>
         <div id="table"></div>
     </div>  
 </div>
